# OpenCV_Test

./: .gitignore  README.md
demo/: OpenCV_Test.cpp  funset.cpp  funset.hpp  opencv_funset.hpp  test_all.cpp  test_all.hpp  test_core.cpp  test_core.hpp  test_cvtColor.cpp  test_cvtColor.hpp  test_dft.cpp  test_dft.hpp  test_dilate.cpp  test_dilate.hpp  test_directory.cpp  test_directory.hpp  test_erode.cpp  test_erode.hpp  test_flip.cpp  test_flip.hpp  test_merge.cpp  test_merge.hpp  test_morphologyEx.cpp  test_morphologyEx.hpp  test_opencv_funset.cpp  test_remap.cpp  test_remap.hpp  test_resize.cpp  test_resize.hpp  test_rotate.cpp  test_rotate.hpp  test_rotate90.cpp  test_rotate90.hpp  test_split.cpp  test_split.hpp  test_threshold.cpp  test_threshold.hpp  test_transpose.cpp  test_transpose.hpp  test_warpAffine.cpp  (+3 more)
demo/FFmpeg_Test/: FFmpeg_Test.cpp  common.cpp  common.hpp  funset.hpp  test_ffmpeg_decode_show.cpp  test_ffmpeg_libavcodec.cpp  test_ffmpeg_libavdevice.cpp  test_ffmpeg_libavfilter.cpp  test_ffmpeg_libavutil.cpp  test_ffmpeg_libswresample.cpp  test_ffmpeg_libswscale.cpp  test_ffmpeg_rtsp_client.cpp  test_ffmpeg_save_video.cpp  test_ffmpeg_usb_stream.cpp  test_libusb.cpp  test_libuvc.cpp  test_live555_rtsp_client.cpp  test_usb_camera_vid_pid.cpp  test_v4l2_usb_stream.cpp  v4l2_common.hpp
demo/Libyuv_Test/: funset.cpp
demo/OpenCV_Test/: OpenCV_Test.cpp  fbc_cv_funset.hpp  opencv_funset.hpp  test_core.cpp  test_cvtColor.cpp  test_dft.cpp  test_dilate.cpp  test_directory.cpp  test_dshow.cpp  test_erode.cpp  test_flip.cpp  test_libexif.cpp  test_merge.cpp  test_morphologyEx.cpp  test_opencv_funset.cpp  test_remap.cpp  test_resize.cpp  test_rotate.cpp  test_rotate90.cpp  test_split.cpp  test_threshold.cpp  test_transpose.cpp  test_warpAffine.cpp  test_warpPerspective.cpp  timer_task.cpp  timer_task.hpp
demo/Python/: image_generic_operations.py  test_camera_calibration.py  test_moviepy.py
demo/Vigra_Test/: funset.cpp
include/: base.hpp
include/core/: base.hpp
prj/linux_cmake_FFmpeg_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_OpenCV_Test/: CMakeLists.txt  build.sh
prj/x86_x64_vc12/: OpenCV_Test.sln
prj/x86_x64_vc12/CImg_Test/: CImg_Test.vcxproj  CImg_Test.vcxproj.filters
prj/x86_x64_vc12/FFmpeg_Test/: FFmpeg_Test.vcxproj  FFmpeg_Test.vcxproj.filters
prj/x86_x64_vc12/Libyuv_Test/: Libyuv_Test.vcxproj  Libyuv_Test.vcxproj.filters
prj/x86_x64_vc12/OpenCV_Test/: OpenCV_Test.sln  OpenCV_Test.vcxproj  OpenCV_Test.vcxproj.filters
prj/x86_x64_vc12/Test_VLFeat/: Test_VLFeat.vcxproj  Test_VLFeat.vcxproj.filters
prj/x86_x64_vc12/VLFeat_DLL/: VLFeat_DLL.vcxproj  VLFeat_DLL.vcxproj.filters
prj/x86_x64_vc12/Vigra_Test/: Vigra_Test.vcxproj  Vigra_Test.vcxproj.filters
prj/x86_x64_vc12/fbc_cv/: fbc_cv.vcxproj  fbc_cv.vcxproj.filters
prj/x86_x64_vc12/libBasicUsageEnvironment/: libBasicUsageEnvironment.vcxproj  libBasicUsageEnvironment.vcxproj.filters
prj/x86_x64_vc12/libUsageEnvironment/: libUsageEnvironment.vcxproj  libUsageEnvironment.vcxproj.filters
prj/x86_x64_vc12/libexif/: config.h  libexif.vcxproj  libexif.vcxproj.filters
prj/x86_x64_vc12/libgroupsock/: libgroupsock.vcxproj  libgroupsock.vcxproj.filters
prj/x86_x64_vc12/libliveMedia/: libliveMedia.vcxproj  libliveMedia.vcxproj.filters
prj/x86_x64_vc12/libusb/: libusb.vcxproj  libusb.vcxproj.filters
prj/x86_x64_vc12/libyuv/: libyuv.vcxproj  libyuv.vcxproj.filters
prj/x86_x64_vc12/vigra/: vigra.vcxproj  vigra.vcxproj.filters
src/: version.txt
src/fbc_cv/src/: hal.cpp  (+36 more)
src/libuvc/: CMakeLists.txt
(+169 files in other folders)
